# Fluffle

./: .dockerignore  .gitignore  Fluffle.sln  LICENSE  README.md
Fluffle.Api/: ApiStartup.cs  AspNetJsonSerializer.cs  Fluffle.Api.csproj  TelemetryBufferFlusher.cs  V1Error.cs
Fluffle.Api.Communication/: ApiEndpoint.cs  Fluffle.Api.Communication.csproj
Fluffle.B2/: B2Client.cs  B2Endpoints.cs  B2ErrorCode.cs  B2ErrorResponse.cs  B2UploadManager.cs  Fluffle.B2.csproj
Fluffle.Bot/: .dockerignore  BotConfiguration.cs  Dockerfile  Fluffle.Bot.csproj  FluffleClient.cs  MessageCleaner.cs  Program.cs  ReverseSearch.cs  Settings.cs  Startup.cs  config.example.yml  config.py  fluffle.py  main.py  mongo.py  rate_limiter.py  requirements.txt  reverse_search.py  settings_menu.py  template.py  utils.py
Fluffle.BrowserExtension/: background.js  content.js  manifest.json  manifestFirefox.json
Fluffle.Client/: Fluffle.Client.csproj  FluffleApiClient.cs  FluffleApiClientBuilder.cs  FluffleException.cs  IFluffleApiClient.cs
Fluffle.Configuration/: Configurations.cs  Fluffle.Configuration.csproj  FluffleConfiguration.cs  LoggerFactory.cs  Timing.cs
Fluffle.Constants/: ContentRatingConstant.cs  CreditableEntityType.cs  FileFormatConstant.cs  Fluffle.Constants.csproj  ImageFormatConstant.cs  MediaTypeConstant.cs  PlatformConstant.cs  Project.cs  SyncTypeConstant.cs
Fluffle.Content.Api/: Dockerfile  Fluffle.Content.Api.csproj  Program.cs
Fluffle.Content.Api.Client/: Fluffle.Content.Api.Client.csproj  IContentApiClient.cs  ServiceCollectionExtensions.cs
Fluffle.Database/: BaseContext.cs  BaseEntity.cs  DbContextRetryPolicy.cs  DesignTimeContext.cs  Extensions.cs  Fluffle.Database.csproj  IConfigurable.cs  ServiceCollectionExtensions.cs  SyncAttribute.cs
Fluffle.DeviantArt.Client/: DeviantArtClient.cs  DeviantArtResponse.cs  Fluffle.DeviantArt.Client.csproj
Fluffle.DeviantArt.Database/: DeviantArtContext.cs  Dockerfile  Fluffle.DeviantArt.Database.csproj  Program.cs
Fluffle.E621Sync/: Dockerfile  (+5 more)
Fluffle.Inference.Api/: main.py  pyproject.toml
Fluffle.Inference.Api/.devcontainer/: devcontainer.json
Fluffle.Research/: poetry_to_local_venv.sh  pyproject.toml  requirements.txt
Fluffle.Research/deviant-art/: config.yml  tags.ipynb
Fluffle.Search.Api.Compare/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  config.example.yml
Fluffle.Search.Api.Compare/src/: main.rs
_next/Fluffle.Inference.Api/: .gitignore  Dockerfile  README.md  bluesky_furry_art.py  exact_match_v2.py  main.py  pyproject.toml
_next/Fluffle.Inference.Api/.devcontainer/: devcontainer.json
(+1634 files in other folders)
