[tool.poetry]
name = "fluffle-inference-api"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
torch = {version = "^2.8.0", source = "pytorch.org"}
torchvision = {version = "^0.23.0", source = "pytorch.org"}
fastapi = {extras = ["standard"], version = "^0.118.0"}


[[tool.poetry.source]]
name = "pytorch.org"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
