[package]
name = "fluffle-compare"
version = "0.16.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-postgres = "0.7"
rand = "0.8"
tokio = { version = "1.17", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
blake2 = "0.10"
parking_lot = "0.12"
serde_yaml = "0.8"
bincode = "1.3"
vpsearch = "2.0.1"
